tests/snapshots/lexer_snapshots__lexer_all@tokens-74.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_function_no_params.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "noop",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Semicolon,
            position: 16,
            line: 1,
            column: 17,
        },
    ],
)
