tests/snapshots/lexer_snapshots__lexer_all@tokens-76.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_interface_decl_unit.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Colon,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: RightBrace,
            position: 29,
            line: 1,
            column: 30,
        },
    ],
)
