tests/snapshots/lexer_snapshots__lexer_all@tokens-78.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_struct_with_generics.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Box",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LT,
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: GT,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftBrace,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: RightBrace,
            position: 26,
            line: 1,
            column: 27,
        },
    ],
)
