tests/snapshots/lexer_snapshots__lexer_all@tokens-79.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_simple_struct.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Point",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: LeftBrace,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: Colon,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: RightBrace,
            position: 23,
            line: 1,
            column: 24,
        },
    ],
)
