tests/snapshots/lexer_snapshots__lexer_all@tokens-8.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/08_interfaces.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Interface,
            position: 43,
            line: 3,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 49,
            line: 3,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 51,
            line: 3,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 58,
            line: 4,
            column: 7,
        },
        Token {
            token_type: Colon,
            position: 59,
            line: 4,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 63,
            line: 4,
            column: 12,
        },
        Token {
            token_type: Comma,
            position: 64,
            line: 4,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 66,
            line: 5,
            column: 2,
        },
        Token {
            token_type: Interface,
            position: 77,
            line: 7,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Printable",
            ),
            position: 87,
            line: 7,
            column: 20,
        },
        Token {
            token_type: Colon,
            position: 88,
            line: 7,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "Named",
            ),
            position: 94,
            line: 7,
            column: 27,
        },
        Token {
            token_type: LeftBrace,
            position: 96,
            line: 7,
            column: 29,
        },
        Token {
            token_type: Function,
            position: 107,
            line: 8,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "to_string",
            ),
            position: 117,
            line: 8,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 118,
            line: 8,
            column: 22,
        },
        Token {
            token_type: SelfRef,
            position: 122,
            line: 8,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 123,
            line: 8,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 124,
            line: 8,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 128,
            line: 8,
            column: 32,
        },
        Token {
            token_type: RightBrace,
            position: 130,
            line: 9,
            column: 2,
        },
        Token {
            token_type: Struct,
            position: 138,
            line: 11,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Book",
            ),
            position: 143,
            line: 11,
            column: 12,
        },
        Token {
            token_type: Colon,
            position: 144,
            line: 11,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "Printable",
            ),
            position: 154,
            line: 11,
            column: 23,
        },
        Token {
            token_type: LeftBrace,
            position: 156,
            line: 11,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 163,
            line: 12,
            column: 7,
        },
        Token {
            token_type: Colon,
            position: 164,
            line: 12,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 168,
            line: 12,
            column: 12,
        },
        Token {
            token_type: Comma,
            position: 169,
            line: 12,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "pages",
            ),
            position: 177,
            line: 13,
            column: 8,
        },
        Token {
            token_type: Colon,
            position: 178,
            line: 13,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 182,
            line: 13,
            column: 13,
        },
        Token {
            token_type: Comma,
            position: 183,
            line: 13,
            column: 14,
        },
        Token {
            token_type: Function,
            position: 195,
            line: 15,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "to_string",
            ),
            position: 205,
            line: 15,
            column: 21,
        },
        Token {
            token_type: LeftParen,
            position: 206,
            line: 15,
            column: 22,
        },
        Token {
            token_type: SelfRef,
            position: 210,
            line: 15,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 211,
            line: 15,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 212,
            line: 15,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 216,
            line: 15,
            column: 32,
        },
        Token {
            token_type: LeftBrace,
            position: 218,
            line: 15,
            column: 34,
        },
        Token {
            token_type: SelfRef,
            position: 227,
            line: 16,
            column: 9,
        },
        Token {
            token_type: Dot,
            position: 228,
            line: 16,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 232,
            line: 16,
            column: 14,
        },
        Token {
            token_type: Plus,
            position: 234,
            line: 16,
            column: 16,
        },
        Token {
            token_type: StringLit(
                " (",
            ),
            position: 239,
            line: 16,
            column: 21,
        },
        Token {
            token_type: Plus,
            position: 241,
            line: 16,
            column: 23,
        },
        Token {
            token_type: LeftParen,
            position: 243,
            line: 16,
            column: 25,
        },
        Token {
            token_type: SelfRef,
            position: 247,
            line: 16,
            column: 29,
        },
        Token {
            token_type: Dot,
            position: 248,
            line: 16,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "pages",
            ),
            position: 253,
            line: 16,
            column: 35,
        },
        Token {
            token_type: As,
            position: 256,
            line: 16,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 260,
            line: 16,
            column: 42,
        },
        Token {
            token_type: RightParen,
            position: 261,
            line: 16,
            column: 43,
        },
        Token {
            token_type: Plus,
            position: 263,
            line: 16,
            column: 45,
        },
        Token {
            token_type: StringLit(
                " pages)",
            ),
            position: 273,
            line: 16,
            column: 55,
        },
        Token {
            token_type: RightBrace,
            position: 277,
            line: 17,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 279,
            line: 18,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 289,
            line: 20,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "show",
            ),
            position: 294,
            line: 20,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 295,
            line: 20,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "p",
            ),
            position: 296,
            line: 20,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 297,
            line: 20,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "Printable",
            ),
            position: 307,
            line: 20,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 308,
            line: 20,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 310,
            line: 20,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 318,
            line: 21,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 319,
            line: 21,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "p",
            ),
            position: 320,
            line: 21,
            column: 10,
        },
        Token {
            token_type: Dot,
            position: 321,
            line: 21,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "to_string",
            ),
            position: 330,
            line: 21,
            column: 20,
        },
        Token {
            token_type: LeftParen,
            position: 331,
            line: 21,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 332,
            line: 21,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 333,
            line: 21,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 334,
            line: 21,
            column: 24,
        },
        Token {
            token_type: RightBrace,
            position: 336,
            line: 22,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 346,
            line: 24,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 351,
            line: 24,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 352,
            line: 24,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 353,
            line: 24,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 354,
            line: 24,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 358,
            line: 24,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 360,
            line: 24,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 366,
            line: 25,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 368,
            line: 25,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 370,
            line: 25,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Book",
            ),
            position: 375,
            line: 25,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 377,
            line: 25,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 382,
            line: 25,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 383,
            line: 25,
            column: 23,
        },
        Token {
            token_type: StringLit(
                "Otter Fusion Spec",
            ),
            position: 403,
            line: 25,
            column: 43,
        },
        Token {
            token_type: Comma,
            position: 404,
            line: 25,
            column: 44,
        },
        Token {
            token_type: Identifier(
                "pages",
            ),
            position: 410,
            line: 25,
            column: 50,
        },
        Token {
            token_type: Colon,
            position: 411,
            line: 25,
            column: 51,
        },
        Token {
            token_type: Int(
                "12",
            ),
            position: 414,
            line: 25,
            column: 54,
        },
        Token {
            token_type: RightBrace,
            position: 416,
            line: 25,
            column: 56,
        },
        Token {
            token_type: Semicolon,
            position: 417,
            line: 25,
            column: 57,
        },
        Token {
            token_type: Identifier(
                "show",
            ),
            position: 424,
            line: 26,
            column: 7,
        },
        Token {
            token_type: LeftParen,
            position: 425,
            line: 26,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "b",
            ),
            position: 426,
            line: 26,
            column: 9,
        },
        Token {
            token_type: RightParen,
            position: 427,
            line: 26,
            column: 10,
        },
        Token {
            token_type: Semicolon,
            position: 428,
            line: 26,
            column: 11,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 432,
            line: 27,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 434,
            line: 28,
            column: 2,
        },
    ],
)
