tests/snapshots/lexer_snapshots__lexer_all@tokens-80.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/parser/parse_map_literal.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftBrace,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: StringLit(
                "a",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Colon,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Comma,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: StringLit(
                "b",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Colon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Int(
                "2",
            ),
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: RightBrace,
            position: 36,
            line: 1,
            column: 37,
        },
        Token {
            token_type: Semicolon,
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: RightBrace,
            position: 39,
            line: 1,
            column: 40,
        },
    ],
)
