tests/snapshots/lexer_snapshots__lexer_all@tokens-83.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_type_alias_union.of
---
Ok(
    [
        Token {
            token_type: Type,
            position: 4,
            line: 1,
            column: 5,
        },
        Token {
            token_type: Identifier(
                "Result",
            ),
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Eq,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Pipe,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Semicolon,
            position: 24,
            line: 1,
            column: 25,
        },
    ],
)
